--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt6 6.2 COMPONENTS Quick QuickControls2 REQUIRED)
 
+if(WIN32)
+    add_compile_options($<$<CXX_COMPILER_ID:MSVC>:/MP>)
+    add_compile_options(/utf-8)
+    set(VCPKG_CMAKE "D:\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake" CACHE STRING "vcpkg.cmake的位置")
+    include(${VCPKG_CMAKE})
+    find_package(FFMPEG 4.4 REQUIRED)
+    include_directories(${FFMPEG_INCLUDE_DIRS})
+    link_directories(${FFMPEG_LIBRARY_DIRS})
+endif()
+
 qt_add_executable(appPeach
     main.cpp MainViewModel.h MainViewModel.cpp PacketHistogram.h PacketHistogram.cpp
 )
